--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "Rust4SenVec"
+name = "rust4_sen_vec"
 version = "0.1.0"
 edition = "2021"
 
@@ -12,3 +12,4 @@ serde = "1.0.151"
 serde_json = "1.0.91"
 tch = "0.10.1"
 tokenizers = "0.13.2"
+tokio = "1.23.0"
